sonar: remove warnings